--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/what_is_Computer_Vision.avif">
+                <img src="images/Transformer.jpg">
                 <div class="layer">
                     <h3>Project2</h3>
                     <p>Spatial Transformers</p>
