Adding third project

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Images/work111.jpeg">
+                <img src="Images/CalenderIMG.png">
                 <div class="layer">
                     <h3>...</h3>
                     <p>Project Coming</p>
-                    <a href="#"><i class="fas fa-link" style="color: #f06c14;"></i></a>
+                    <a href="https://github.com/WillJKimball/ScheduleApp"><i class="fas fa-link" style="color: #f06c14;"></i></a>
                 </div>
             </div>
         </div>
