adding name of third project

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <div class="work">
                 <img src="Images/CalenderIMG.png">
                 <div class="layer">
-                    <h3>...</h3>
-                    <p>Project Coming</p>
+                    <h3>Project3</h3>
+                    <p>Daily Schedule App</p>
                     <a href="https://github.com/WillJKimball/ScheduleApp"><i class="fas fa-link" style="color: #f06c14;"></i></a>
                 </div>
             </div>
