--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 class="sub-title"> My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="Images/BasketballIMG.PNG">
+                <img src="Images/BasketballIMG.png">
                 <div class="layer">
                     <h3>Project1</h3>
                     <p>College to NBA</p>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/TransformerIMG.png">
+                <img src="Images/TransformerIMG.png">
                 <div class="layer">
                     <h3>Project2</h3>
                     <p>Spatial Transformers</p>
